# dfttools

./: .gitignore  README.md  __init__.py  pyproject.toml
.github/workflows/: documentation.yml  interrogate.yaml  pypi.yaml  pypi.yml  pyright.yaml  pyright.yml  pytest.yaml  pytest.yml  ruff.yaml  ruff.yml  sphinx-docs.yaml  sphinx-docs.yml  test.yaml
dfttoolkit/: __init__.py  cubefile.py  geometry.py  output.py  parameters.py  trajectory.py  vibrations.py  visualise.py
dfttoolkit/utils/: __init__.py  math_utils.py  run_utils.py  vibrations_utils.py
dfttools/: base_parser.py  benchmarking.py  custom_ase.py  file_crawler.py  friction.py  friction_tensor.py  geometry.py  output.py  parameters.py  utils.py  vibrations.py  visualisation.py  visualise.py
dfttools/utils/: file_utils.py  geometry_utils.py  math_utils.py  periodic_table.py  units.py  utils.py  vibrations_utils.py
docs/: generate_index_files.sh
docs/source/: conf.py  dfttools.rst  dfttools.utils.rst  index.rst  modules.rst
tests/: .aims_bin_loc.txt  TestGeometry.py  conftest.py  fixtures.py  test_base.py  test_benchmarking.py  test_geometry.py  test_output.py  test_parameters.py  test_references.yaml  test_utils.py
tests/fixtures/aims_calculations/: test_extractor.py
tests/fixtures/aims_calculations/1/: control.in
tests/fixtures/aims_calculations/3/: aims.out
tests/fixtures/aims_calculations/5/: aims.out  control.in
tests/fixtures/aims_calculations/6/: aims.out  control.in
tests/fixtures/aims_calculations/7/: control.in
tests/fixtures/default_aims_calcs/1/: aims.out  control.in
tests/fixtures/default_aims_calcs/2/: aims.out  control.in
tests/fixtures/default_aims_calcs/3/: control.in
tests/fixtures/default_aims_calcs/4/: control.in
tests/fixtures/default_aims_calcs/6/: hessian.aims
tests/fixtures/default_aims_calcs/7/: aims.out
tests/fixtures/default_aims_calcs/8/: control.in
tests/fixtures/elsi_files/: D_spin_01_kpt_000001.csc
tests/fixtures/manipulated_aims_files/2/: control.in
tutorials/: tutorial_geometry.ipynb  tutorial_output.ipynb
tutorials/data/: aims.out
