[tool.poetry]
name = "dfttools"
version = "0.1.0"
description = "A collection of python modules and libraries for several DFT codes to handle input and output."
authors = [
    "Lukas Hoermann <lukas.hoermann@warwick.ac.uk>",
    "Dylan Morgan <dylan.morgan@warwick.ac.uk",
]
license = "GPL-3.0"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
numpy = "^1.26.4"
scipy = "^1.13.0"
ase = "^3.22.1"
pyyaml = "^6.0.1"
spglib = "^2.5.0"
networkx = "^3.3"

[tool.poetry.group.dev]
optional = true

[tool.poetry.group.dev.dependencies]
black = "^24.3.0"
ruff = "^0.3.5"
pytest = "^8.2.0"
ptpython = "^3.0.26"

[tool.poetry.group.docs]
optional = true

[tool.poetry.group.docs.dependencies]
sphinx = "^7.4.7"
sphinx-rtd-theme = "^2.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
pythonpath = "dfttools"
testpaths = ["tests"]
addopts = [
    "--import-mode=importlib",
]
